--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Booking Ticket</title>
   </head>
 
   <body>
